--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -173,8 +173,7 @@ Lecture slides:
 
 - Class 13 (11/12) slides: [html](./slides/EDUC641_13_continuousrel.html) | [pdf](./slides/EDUC641_13_continuousrel.pdf)
 - Class 14 (11/14) slides: [html](./slides/EDUC641_14_regression.html) | [pdf](./slides/EDUC641_14_regression.pdf)
-<!--
-- Class 15-16 slides (11/16 & 11/21): [html](./slides/EDUC641_15_regression2.html) | [pdf](./slides/EDUC641_15_regression2.pdf) -->
+- Class 15-16 slides (11/19 & 11/21): [html](./slides/EDUC641_15_regression2.html) | [pdf](./slides/EDUC641_15_regression2.pdf)
 - Data:  [life_expectancy.csv](./data/life_expectancy.csv)
 - R code: [R script](./slides/EDUC641_13_code.R)
 - Lab activities: [Week 7 Lab](./labs/Lab7.docx) | <!-- [Week 8 Lab](./labs/Lab8.docx) -->
