--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -103,9 +103,8 @@ Deadline: December 2, 11:59pm
 
 Download: [html file](./assignments/assignment04.html) | [cont.csv dataset](./data/cont.csv)
 
-<!-- 
 Key: 
- [doc file](./assignments/keys/assignment04_key.docx); [R script](./assignments/keys/assignment04_key.R) -->
+ [doc file](./assignments/keys/assignment04_key.docx); [R script](./assignments/keys/assignment04_key.R)
 
 
 ## 3.5. Final
@@ -114,13 +113,12 @@ Final assignment
 
 Deadline: December 11, 4:59pm
 
-<!-- 
+
 Download: 
 [html file](./assignments/assignment05.html) | [ah01.csv dataset](./data/ah01.csv); [ah02.csv dataset](./data/ah02.csv) 
 
 Key:
 
--->>
 
 
 
