--- a/assignments/assignment05.Rmd
+++ b/assignments/assignment05.Rmd
@@ -17,7 +17,7 @@ The purpose of this assignment is to practice the concepts and vocabulary we hav
 
 ### Submission Requirements
 
-Please upload below two files on Canvas by **December 6th at 11:59pm**:  
+Please upload the below two files on Canvas by **December 11th at 4:59pm**:  
 
 1. An .html, .doc(x) or .pdf file that includes your typed responses (in your own words and not identical to anybody else's except your partner), tables, and/or figures to the problems
 2. The .Rmd or .R file that you used to render the tables and figures in the above html/pdf. 
